--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>BUDDY the Robot</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Buddy the Robot, le robot accompagnatif de l'éducation, des séniors, des plus fragiles. La solution à tout vos problèmes">
         <link rel="stylesheet" href="css/style-index.css">
@@ -53,6 +54,10 @@
                 </p>
             </div>
         </section>
+        <section class="video">
+            <video src="video/The Baby - Buddy the Emotional Robot (EN).mp4" width="900px" controls alt="Video représentant une des utilisations du Robot Buddy">
+            </video>
+        </section>
         <section class="Utilisation">
             <div class="bloc-1"> 
                 <p><strong>LE COMPAGNON ÉDUCATIF DES PLUS JEUNES</strong></p>
@@ -71,8 +76,27 @@
                 <img src="images/buddy.png" alt="Image du Buddy le robot" width="290px" height="310px">
              </div>
         </section>
-            
-                
+        <section class="caracteristique">
+            <div class="capacites">
+                <p>Le Robot Buddy est très efficace dans de nombreux domaine comme par exemple <a href="https://www.youtube.com/watch?v=4LzkVYwhtBs">servir d’avatar pour des enfants malades</a> (comme vu dans le 19.45 de M6 au CHU de Toulouse). Il est regorge de nombreuses capacités et caractéristiques tel que celle ci-dessous.</p>
+            </div>
+            <div class="pdf">
+                <iframe src="pdf/caracteristique.pdf" width="1250px" height="1200px"></iframe>
+            </div>
+        </section>
+    <hr>
+        <section class="prix">
+            <div class="Bud">
+                <img src="images/Buddy-Happy.png" alt="Image de Buddy le Robot" width="400px" height="400px">
+            </div>
+             <div class="price">
+                <a href="achat-buddy.html" class="button">Acheter Buddy</a>
+            </div>
+            <div class="cart">
+                <img class="bag" src="images/bag.png" alt="sac de shopping" weight="150" height="150">
+            </div>
+        </section>
+    <hr>       
         <footer>
             <section class="end-page">
                 <div class="contact">
