--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Il est parfait pour <strong>enrichir</strong> votre expérience client, <strong>susciter</strong> l’intérêt,<strong>générer </strong>du trafic, <strong>présenter</strong>  les offres et <strong>orienter</strong> selon les demandes ainsi que divertir. 
                 </p>
             </div>
-            <div class="Bénéfices">
+            <div class="Benefices">
                 <p>
                     <h3>Bénéfices</h3>
                     <ul>
